--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -314,19 +314,19 @@ year={2007},
 pages={483–502}
 }
 
-@misc{Emelyanov2007,
-title={Updated ephemeris of Phoebe, ninth satellite of Saturn},
-volume={473},
-url={http://dx.doi.org/10.1051/0004-6361:20077920},
-DOI={10.1051/0004-6361:20077920},
-number={1},
-journal={Astronomy and Astrophysics},
-publisher={EDP Sciences},
-author={Emelyanov, N. V.},
-year={2007},
-month={Oct},
-pages={343–346}
-}
+%@article{Emelyanov2007,
+%title={Updated ephemeris of Phoebe, ninth satellite of Saturn},
+%volume={473},
+%url={http://dx.doi.org/10.1051/0004-6361:20077920},
+%DOI={10.1051/0004-6361:20077920},
+%number={1},
+%journal={Astronomy and Astrophysics},
+%publisher={EDP Sciences},
+%author={Emelyanov, N. V.},
+%year={2007},
+%month={Oct},
+%pages={343–346}
+%}
 
 @inbook{Barucci2008,
 author = {Barucci, M Antonietta and Brown, Michael E and Emery, Joshua P},
