--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -61,7 +61,7 @@ $^{6}$Federal University of Technology - Paran\'a (UTFPR / DAFIS), Rua Sete de S
 Due to their orbital configurations, it is common belief that the irregular satellites were probably captured by the giant planets in the early solar system. It is important to know their physical parameters, such as size, shape, albedo and composition, to trace back their true origin. The best ground-based technique to determine size and shape, and thus constrain the albedo and in a broader sense composition, is the observation of stellar occultations by these objects.
 We aim to predict stellar occultations for the eight largest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda, and for the irregular satellites Phoebe of Saturn and Nereid of Neptune, and also for Triton.
 We identified candidates to stellar occultations by the irregular satellites from the UCAC4 catalogue and from a catalogue of stars in the sky-path of Neptune obtained from observations made with the ESO2p2/WFI (2.2 m Max-Planck ESO telescope with the Wide Field Imager) instrument. These catalogues were crossed with the ephemeris of the satellites to identify stellar occultations. We used a new ephemeris based solely on the observations from \cite{GomesJunior2015} to generate predictions for the short-time future of the satellites of Jupiter. For Phoebe, we used an updated ephemeris and for Nereid and Triton we used recently published ephemeris.
-We managed to identify \noccs candidates of stellar occultations between the period of January, 2016 and December, 2020. We made observational tests for the prediction of the event of Himalia in March 03, 2015. The stars and objects were observed close to the date predicted and in the same field to minimize errors and the obtained relative satellite-star positions were used to evaluate the predictions. The comparisons between the predictions and the observation tests show a good agreement. We call attention for an occultation by Triton of a bright star (R=12.5) in October 5, 2017. The event can be observed from Europe and the east coast of USA and will be a good opportunity to access the current state of the atmosphere of the satellite. We note that Jupiter will cross a populated region of stars in 2019-2020 and Saturn in 2018. This results in a large number of occultations predicted for that period.
+We managed to identify \noccs candidates of stellar occultations between the period of January, 2016 and December, 2020. We made observational tests for the prediction of the event of Himalia in March 03, 2015. The stars and objects were observed close to the date predicted and in the same field to minimize errors and the obtained relative satellite-star positions were used to evaluate the predictions. The comparisons between the predictions and the observation tests show a good agreement. We call attention for an occultation by Triton of a bright star (R=12.5) in October 5, 2017. The event can be observed from Europe and the east coast of USA and will be a good opportunity to access the current state of the atmosphere of the satellite. We note that Jupiter will cross the galactic plane in 2019-2020 and Saturn in 2018. This results in a large number of occultations predicted for that period.
 We discuss how the successful observation of a stellar occultation by these objects is quite possible and present some of those potential occultations.
 \end{abstract}
 
@@ -355,10 +355,10 @@ The critical parameter in the comparisons is the C/A, which here is related to l
 \multicolumn{4}{c}{Differences with respect to the STE prediction} \tabularnewline
 Method  & Instant of C/A  & C/A & Sit.   \tabularnewline
 \hline
-STE & 00:39:51 UTC & $0\farcs703$ & I \tabularnewline
-JPL & -26s & +11mas (36km) & II \tabularnewline % (284km)
-Feb. 22 Obs. & -14s & -20mas (65km) & III \tabularnewline % (153km)
-Mar. 03 Obs. & -36s & -09mas (29km) & IV \tabularnewline % (393km)
+STE & 00:39:51 UTC & $0\farcs703$ & i \tabularnewline
+JPL & -26s & +11mas (36km) & ii \tabularnewline % (284km)
+Feb. 22 Obs. & -14s & -20mas (65km) & iii \tabularnewline % (153km)
+Mar. 03 Obs. & -36s & -09mas (29km) & iv \tabularnewline % (393km)
 \hline
 \end{tabular}
 \par\end{centering}
